From 0076c70 (pbeam):
====================

In prisim/primary_beams.py,

(*) In function airy_disk_pattern(), remove keyword input
gaussian_approx. Update function docstring accordingly
(*) In function primary_beam_generator(), remove usage of keyword
input gaussian_approx in calls to airy_disk_pattern()

From 8cee83e (closure-adv):
==========================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add 'gaussian' as one of the available antenna element shape
parameters

In prisim/primary_beams.py,

(*) Add function gaussian_beam() along with docstring to compute
a Gaussian voltage or power pattern.
(*) In function primary_beam_generator(), include call to
gaussian_beam() if telescope shape parameter is set to 'gaussian'.
Update function docstring accordingly

In scripts/run_prisim.py,

(*) Add checks and accept inputs for antenna aperture shape that is
'gaussian' in accordance with the changes above.

From f5a1dec (closure-adv):
==========================

In setup.py,

(*) Update Astropy version range in setup.py 

From e0a90a1 (closure-adv):
==========================

(*) Rename prisim/closure.py to prisim/bispectrum_phase.py

From 2c2c7e1 (closure-adv):
==========================

In prisim/closure.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum, fix
interval in call to LKP.find_1NN()
(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, change default behavior of input incohax.
Update member function docstring accordingly

From d1d2465 (closure-adv):
==========================

In prisim/closure.py,

(*) Add function loadnpz() along with docstring to read an input NPZ
file and return the loaded data
(*) In member function __init__() of class ClosurePhase, update the
loading of data through loadnpz() instead of through npz2hdf5()
(*) In member function smooth_in_tbins() of class ClosurePhase, check
for presence of certain 'prelim' under 'processed' before assigning
them.

From cd8ad7f (closure-adv):